--- a/src/Componentes/Deque.css
+++ b/src/Componentes/Deque.css
@@ -3,4 +3,17 @@
     align-items: center;
     flex-direction: column;
     
+
+    .Titulo{
+        border: 1px solid red;
+    }
+    .Modificacoes{
+        border: 3px solid yellowgreen;
+    }
+    .Numero{
+        border: 3px solid green;
+    }
+    .FilaDupla{
+        border: 3px solid blue;
+    }
 }
