--- a/src/Componentes/Deque.css
+++ b/src/Componentes/Deque.css
@@ -1,19 +1,27 @@
-.Geral{
+.Geral {
+    border: 3px solid gray;
     display: flex;
     align-items: center;
     flex-direction: column;
-    
-
-    .Titulo{
-        border: 1px solid red;
-    }
-    .Modificacoes{
-        border: 3px solid yellowgreen;
-    }
-    .Numero{
-        border: 3px solid green;
+    h1{
+        font-family: Arial, Helvetica, sans-serif;
     }
     .FilaDupla{
         border: 3px solid blue;
+        .Elemento{
+            border: 3px solid red;
+        }
+    }
+    .Botoes{
+        border: 3px solid purple;
+        input{
+            border: 3px solid green;
+        }
+        section{
+            border: 3px solid orangered;
+        }
+        button{
+            border: 3px solid orange;
+        }
     }
 }
