--- a/src/Componentes/Deque.css
+++ b/src/Componentes/Deque.css
@@ -1,9 +1,11 @@
-.Geral {
-    
+.Geral { 
     border: 3px solid gray; 
     display: flex; 
     align-items: center;
     flex-direction: column;
+
+    width: 100%;
+    height: 100%;
     h1{
         /*caixa do título*/
         margin-top: 100px; /*posição em relação ao teto*/
@@ -24,6 +26,13 @@
         border: 3px solid blue;
         /*vizualização da fila*/
         display: flex;
+        width: 80%;
+        height: 160px;
+        justify-content: center;
+        justify-content: space-evenly;
+        align-items: center;
+        overflow-x: scroll;
+        
 
         .Elemento{
             border: 3px solid red;
@@ -31,6 +40,8 @@
             /*aparência da cada célula*/
             width: 100px;
             height: 100px;
+
+            
         }
     }
     .Botoes{
