--- a/src/Componentes/Deque.css
+++ b/src/Componentes/Deque.css
@@ -1,15 +1,37 @@
 .Geral{
     /*borda guia*/
-    border: 5px solid black;
-    height: 1000px;
+    /*border: 5px solid black;*/
+    min-height: 100vh;
+
+    background-color: #ffffff; /*cor do fundo*/
+    font-family: Arial, Helvetica, sans-serif; /*muda a fonte*/
     
+    /*organizar itens*/
+    display: flex; /*deixa flexível*/
+    align-items: center; /*alinha no centro da horizontal*/
+    flex-direction: column; /*alinha no centro da vertical*/
 
     h1{
-        /*borda guia*/
-        border: 5px solid red;
+        /*aparência da caixa*/
+        background-color:  #bf2a2c;
+        border-radius: 15px;
+        /*propoções da caixa*/
+        width: 400px;
+        height: 100px;
+        /*posição da caixa*/
+        margin-top: 120px;
+        /*aparência da letra*/
+        color: #f2f2f2;
+        font-size: 50px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        
+        
         
     
-    }
+    }   
     .FilaDupla
     {
         border: 5px solid blue;
@@ -18,6 +40,15 @@
         }
     }
     .Botoes{
-        
+        border: 3px solid rgb(12, 239, 255);
+        input{
+            border: 3px solid olivedrab;
+        }
+        section{
+            border: 3px solid orangered;
+        }
+        button{
+            border: 3px solid orange;
+        }
     }
 }
