--- a/src/Componentes/Deque.css
+++ b/src/Componentes/Deque.css
@@ -19,7 +19,7 @@
         width: 400px;
         height: 100px;
         /*posição da caixa*/
-        margin-top: 120px;
+        margin-top: 180px;
         /*aparência da letra*/
         color: #f2f2f2;
         font-size: 50px;
@@ -27,28 +27,122 @@
         align-items: center;
         text-align: center;
         justify-content: center;
-        
-        
-        
-    
     }   
     .FilaDupla
     {
-        border: 5px solid blue;
+        /*border: 5px solid blue;*/
+
+        /*aparência da fila*/
+        display: flex;
+        gap: 15px;
+        margin: 30px 0;
+
+        /*posição da fila*/
+        padding-top: 80px;
+
         .Elemento{
-            border: 2px solid red;
+            /*border: 2px solid red;*/
+
+            /*aparÊncia dos elementos*/
+            width: 93px;
+            height: 90px;
+            border-radius: 16px;
+            background-color: #ddd6d6;
+
+            /*aparência do conteúdo*/
+            align-items: center;
+            justify-content: center;
+            font-size: 40px;
+            font-weight: bold;
+
+            /*posição dos elementos*/
+            display: flex;
+            
         }
     }
     .Botoes{
-        border: 3px solid rgb(12, 239, 255);
+        /*border: 3px solid rgb(12, 239, 255);*/
+
+        /*posição geral dos botões*/
+        padding-top: 100px;
+        display: flex;
+        align-items: center;
+        gap: 30px;
+        .BotaoElemento{
+            display: flex;
+            flex-direction: column;
+            gap:10px;
+            font-weight: bold;
+            align-items: center;
+        }
         input{
             border: 3px solid olivedrab;
+            
+
+            /*aparência do botão*/
+            background-color: #33a685;
+            width: 100px;
+            height: 100px;
+            border: none;
+            border-radius: 10px;
+
+            /*aparência do conteúdo do botão*/
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            color: #ddd6d6;
+
+
         }
+
         section{
-            border: 3px solid orangered;
+            /*border: 3px solid orangered;*/
+
+            /*posição dos botões*/
+            display: flex;  
+            justify-content: center;
+            gap:50px;
+            text-align: center;
+            
+        }
+        .Enfileirar{
+            display: flex;
+            flex-direction: column;
+            gap:10px;
+            font-weight: bold;
+        }
+        .Desenfileirar{
+            display: flex;
+            flex-direction: column;
+            gap:10px;
+            font-weight: bold;
         }
         button{
             border: 3px solid orange;
+
+            /*aparência dos botões*/
+            width: 160px;
+            height: 50px;
+            border: none;
+            border-radius: 20px;
+            background-color: #ffbd59;
+
+            /*aparÊncia do conteúdo dos botões*/
+            font-size: 16px;
+            font-weight: bold;
+
+            /*mudar o cursor*/
+            cursor: pointer;
+            
         }
+        button:hover {
+            transform: scale(1.05); /*aumenta o botão quando o mouse passa em cima*/
+
+        }
+        button:active{
+            background-color: #ffdd77 ;
+            
+        }
+
     }
 }
